; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/sh2_dynarec/extr_assem_arm.c_emit_movsbl_indexed_map.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/sh2_dynarec/extr_assem_arm.c_emit_movsbl_indexed_map.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@HOST_TEMPREG = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [16 x i8] c"ldrsb %s,%s+%s\0A\00", align 1
@regname = common dso_local global i32* null, align 8
@.str.1 = private unnamed_addr constant [21 x i8] c"add %s,%s,%s,lsl #2\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @emit_movsbl_indexed_map(i32 %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %9 = load i32, i32* %7, align 4
  %10 = icmp slt i32 %9, 0
  br i1 %10, label %11, label %16

11:                                               ; preds = %4
  %12 = load i32, i32* %5, align 4
  %13 = load i32, i32* %6, align 4
  %14 = load i32, i32* %8, align 4
  %15 = call i32 @emit_movsbl_indexed(i32 %12, i32 %13, i32 %14)
  br label %83

16:                                               ; preds = %4
  %17 = load i32, i32* %5, align 4
  %18 = icmp eq i32 %17, 0
  br i1 %18, label %19, label %45

19:                                               ; preds = %16
  %20 = load i32, i32* %7, align 4
  %21 = load i64, i64* @HOST_TEMPREG, align 8
  %22 = call i32 @emit_shlimm(i32 %20, i32 2, i64 %21)
  %23 = load i32*, i32** @regname, align 8
  %24 = load i32, i32* %8, align 4
  %25 = sext i32 %24 to i64
  %26 = getelementptr inbounds i32, i32* %23, i64 %25
  %27 = load i32, i32* %26, align 4
  %28 = load i32*, i32** @regname, align 8
  %29 = load i32, i32* %6, align 4
  %30 = sext i32 %29 to i64
  %31 = getelementptr inbounds i32, i32* %28, i64 %30
  %32 = load i32, i32* %31, align 4
  %33 = load i32*, i32** @regname, align 8
  %34 = load i64, i64* @HOST_TEMPREG, align 8
  %35 = getelementptr inbounds i32, i32* %33, i64 %34
  %36 = load i32, i32* %35, align 4
  %37 = call i32 @assem_debug(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str, i64 0, i64 0), i32 %27, i32 %32, i32 %36)
  %38 = load i32, i32* %8, align 4
  %39 = load i32, i32* %6, align 4
  %40 = load i64, i64* @HOST_TEMPREG, align 8
  %41 = trunc i64 %40 to i32
  %42 = call i32 @rd_rn_rm(i32 %38, i32 %39, i32 %41)
  %43 = or i32 -510656304, %42
  %44 = call i32 @output_w32(i32 %43)
  br label %82

45:                                               ; preds = %16
  %46 = load i32, i32* %5, align 4
  %47 = icmp sgt i32 %46, -256
  br i1 %47, label %48, label %51

48:                                               ; preds = %45
  %49 = load i32, i32* %5, align 4
  %50 = icmp slt i32 %49, 256
  br label %51

51:                                               ; preds = %48, %45
  %52 = phi i1 [ false, %45 ], [ %50, %48 ]
  %53 = zext i1 %52 to i32
  %54 = call i32 @assert(i32 %53)
  %55 = load i32*, i32** @regname, align 8
  %56 = load i32, i32* %8, align 4
  %57 = sext i32 %56 to i64
  %58 = getelementptr inbounds i32, i32* %55, i64 %57
  %59 = load i32, i32* %58, align 4
  %60 = load i32*, i32** @regname, align 8
  %61 = load i32, i32* %6, align 4
  %62 = sext i32 %61 to i64
  %63 = getelementptr inbounds i32, i32* %60, i64 %62
  %64 = load i32, i32* %63, align 4
  %65 = load i32*, i32** @regname, align 8
  %66 = load i32, i32* %7, align 4
  %67 = sext i32 %66 to i64
  %68 = getelementptr inbounds i32, i32* %65, i64 %67
  %69 = load i32, i32* %68, align 4
  %70 = call i32 @assem_debug(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.1, i64 0, i64 0), i32 %59, i32 %64, i32 %69)
  %71 = load i32, i32* %8, align 4
  %72 = load i32, i32* %6, align 4
  %73 = load i32, i32* %7, align 4
  %74 = call i32 @rd_rn_rm(i32 %71, i32 %72, i32 %73)
  %75 = or i32 -528482304, %74
  %76 = or i32 %75, 256
  %77 = call i32 @output_w32(i32 %76)
  %78 = load i32, i32* %5, align 4
  %79 = load i32, i32* %8, align 4
  %80 = load i32, i32* %8, align 4
  %81 = call i32 @emit_movsbl_indexed(i32 %78, i32 %79, i32 %80)
  br label %82

82:                                               ; preds = %51, %19
  br label %83

83:                                               ; preds = %82, %11
  ret void
}

declare dso_local i32 @emit_movsbl_indexed(i32, i32, i32) #1

declare dso_local i32 @emit_shlimm(i32, i32, i64) #1

declare dso_local i32 @assem_debug(i8*, i32, i32, i32) #1

declare dso_local i32 @output_w32(i32) #1

declare dso_local i32 @rd_rn_rm(i32, i32, i32) #1

declare dso_local i32 @assert(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
